Duplicate Wandb logger to train_autoencoder.py because otherwise wandb doesn't work for some weird multiprocessing windows. Fix a few crashes. The script now runs

--- a/applications/autoencoder/default.yaml
+++ b/applications/autoencoder/default.yaml
@@ -6,7 +6,6 @@ InputOutput:
   
 ModelParameters:
   model: Coma
-  eval: true
   checkpoint_file: false
   n_layers: 4
   z: 8
@@ -15,6 +14,7 @@ ModelParameters:
   polygon_order: [6, 6, 6, 6, 6]
 
 LearningParameters:
+  eval: false
   batch_size: 16
   learning_rate: 0.008
   learning_rate_decay: 0.99
