Expand user config path

--- a/applications/autoencoder/default.yaml
+++ b/applications/autoencoder/default.yaml
@@ -2,7 +2,7 @@ InputOutput:
   visualize: true
   data_dir: data/COMA
   output_dir: results/COMA
-  template_fname: data/COMA/template/template.obj
+  template_fname: data/COMA/template/centered_template.ply
   
 ModelParameters:
   model: Coma
