--- a/applications/DECA/conf/deca_finetune.yaml
+++ b/applications/DECA/conf/deca_finetune.yaml
@@ -2,7 +2,8 @@ defaults:
   - data: data
 #  - model: deca
   - model/paths : desktop
-  - model/settings : default
+  - model/settings : default_coarse
+#  - model/settings : default_detailed
   - model/sizes : default
   - model/flame_tex: bfm_desktop
   - learning: sgd
