--- a/applications/DECA/conf/inout/cluster.yaml
+++ b/applications/DECA/conf/inout/cluster.yaml
@@ -1,3 +1,4 @@
 # @package _group_
 output_dir: /ps/scratch/rdanecek/emoca/finetune_deca
+full_run_dir: /ps/scratch/rdanecek/emoca/finetune_deca
 name: coding
