Add suport for sub-batching the same idenity for Emotional Datasets. Refactor DECA into encoding, decoding, loss computation steps and differentiate whether they happen in training or validation mode.

--- a/applications/DECA/conf/deca_finetune.yaml
+++ b/applications/DECA/conf/deca_finetune.yaml
@@ -2,8 +2,8 @@ defaults:
   - data: data
 #  - model: deca
   - model/paths : desktop
-  - model/settings : default_coarse
-#  - model/settings : default_detailed
+#  - model/settings : default_coarse
+  - model/settings : default_detailed
   - model/sizes : default
   - model/flame_tex: bfm_desktop
   - learning: sgd
