--- a/applications/DECA/deca_conf/deca_finetune_detail.yaml
+++ b/applications/DECA/deca_conf/deca_finetune_detail.yaml
@@ -1,10 +1,8 @@
 defaults:
   - data: data
-#  - model: deca
   - model/paths : desktop
-#  - model/settings : default_coarse
   - model/settings : default_detailed
   - model/sizes : default
   - model/flame_tex: bfm_desktop
-  - learning: sgd
+  - learning: finetune_adam_detail
   - inout: desktop
