Refactore DECA into a separate file. Include the main DECA class from Yao's repo. Incorporate EmoNet loss into DECA. Unfortunately this causes an out of memory error as the whole thing no longer fits into 12GB of GPU.

--- a/applications/DECA/deca_conf/model/settings/default_coarse.yaml
+++ b/applications/DECA/deca_conf/model/settings/default_coarse.yaml
@@ -18,6 +18,10 @@ light_reg: 12
 photow: 2
 shape_constrain_type: 'exchange' # None
 
+use_emonet_loss: False
+emonet_reg: 0.15
+
+
 # training related (to remove)
 #multi_gpu: false
 #n_epoch: 500
