--- a/applications/DECA/deca_conf/deca_finetune_coarse.yaml
+++ b/applications/DECA/deca_conf/deca_finetune_coarse.yaml
@@ -2,8 +2,8 @@ defaults:
   - data: data
   - model/paths : desktop
   - model/settings : default_coarse
-  - model/sizes : default
-#  - model/sizes : default_coarse
+#  - model/sizes : default
+  - model/sizes : default_coarse
   - model/flame_tex: bfm_desktop
   - learning: finetune_adam_coarse
   - inout: desktop
