Add configs for cluster computation

--- a/applications/DECA/deca_conf/deca_finetune_coarse_cluster.yaml
+++ b/applications/DECA/deca_conf/deca_finetune_coarse_cluster.yaml
@@ -1,9 +1,9 @@
 defaults:
-  - data: data_desktop
-  - model/paths : desktop
+  - data: data_cluster
+  - model/paths : cluster
   - model/settings : default_coarse
 #  - model/sizes : default
   - model/sizes : default_coarse
-  - model/flame_tex: bfm_desktop
+  - model/flame_tex: bfm
   - learning: finetune_adam_coarse
-  - inout: desktop
+  - inout: cluster
