--- a/applications/DECA/deca_conf/model/sizes/default.yaml
+++ b/applications/DECA/deca_conf/model/sizes/default.yaml
@@ -1,11 +1,13 @@
 # @package model
 batch_size_train: 1
-batch_size_test: 1
-batch_size_val: 1
+batch_size_test: 4
+batch_size_val: 4
 train_K: 2 # num pictures of an identity per batch
 val_K: 1 # num pictures of an identity per batch
 test_K: 1 # num pictures of an identity per batch
-K_policy: random
+train_K_policy: random
+val_K_policy: sequential
+test_K_policy: sequential
 #K_policy: sequential
 
 # latent space
