--- a/applications/DECA/deca_conf/model/sizes/default_coarse.yaml
+++ b/applications/DECA/deca_conf/model/sizes/default_coarse.yaml
@@ -5,7 +5,9 @@ batch_size_val: 16
 train_K: 4 # num pictures of an identity per batch
 val_K: 1 # num pictures of an identity per batch
 test_K: 1 # num pictures of an identity per batch
-K_policy: random
+train_K_policy: random
+val_K_policy: sequential
+test_K_policy: sequential
 #K_policy: sequential
 
 # latent space
