Separate DECA training in proper stages (train vs test and what kind).
Set configs for maximum batch sizes / K sizes on a single (16GB) GPU

--- a/applications/DECA/deca_conf/deca_finetune_detail.yaml
+++ b/applications/DECA/deca_conf/deca_finetune_detail.yaml
@@ -5,5 +5,6 @@ defaults:
   - model/sizes : default
 #  - model/sizes : default_detail
   - model/flame_tex: bfm_desktop
-  - learning: finetune_adam_detail
+  - learning/optimizer: finetune_adam_detail
+  - learning/batching: single_gpu_detail
   - inout: desktop
