--- a/applications/DECA/deca_conf/learning/optimizer/adam.yaml
+++ b/applications/DECA/deca_conf/learning/optimizer/adam.yaml
@@ -1,4 +1,4 @@
-# @package _group_
+# @package learning
 eval: false
 batch_size: 1
 learning_rate: 0.008
@@ -6,4 +6,3 @@ learning_rate_decay: 0.99
 weight_decay: 0.0005
 max_epochs: 300
 optimizer: Adam
-num_gpus: 1
