--- a/applications/DECA/deca_conf/deca_finetune_coarse.yaml
+++ b/applications/DECA/deca_conf/deca_finetune_coarse.yaml
@@ -5,5 +5,6 @@ defaults:
   - model/sizes : default
 #  - model/sizes : default_coarse
   - model/flame_tex: bfm_desktop
-  - learning: finetune_adam_coarse
+  - learning/optimizer: finetune_adam_coarse
+  - learning/batching: single_gpu_coarse
   - inout: desktop
