--- a/applications/DECA/deca_conf/learning/optimizer/finetune_adam_detail.yaml
+++ b/applications/DECA/deca_conf/learning/optimizer/finetune_adam_detail.yaml
@@ -1,9 +1,7 @@
-# @package _group_
+# @package learning
 #eval: false
-batch_size: 1
 learning_rate: 0.0001
 learning_rate_decay: 0.99
 weight_decay: 0.0005
-max_epochs: 3
+max_epochs: 2
 optimizer: Adam
-num_gpus: 1
