--- a/applications/DECA/deca_conf/deca_finetune_detail_cluster.yaml
+++ b/applications/DECA/deca_conf/deca_finetune_detail_cluster.yaml
@@ -1,9 +1,8 @@
 defaults:
   - data: data_cluster
   - model/paths : cluster
-  - model/settings : default_detailed
+  - model/settings : default_detail
   - model/sizes : default
-#  - model/sizes : default_detail
   - model/flame_tex: bfm
   - learning/optimizer: finetune_adam_detail
   - learning/batching: single_gpu_detail
