--- a/applications/DECA/deca_conf/deca_finetune_detail_emonet.yaml
+++ b/applications/DECA/deca_conf/deca_finetune_detail_emonet.yaml
@@ -1,9 +1,9 @@
 defaults:
   - data: data_desktop
   - model/paths : desktop
-  - model/settings : default_coarse
+  - model/settings : default_detail_emonet
   - model/sizes : default
   - model/flame_tex: bfm_desktop
-  - learning/optimizer: finetune_adam_coarse
-  - learning/batching: single_gpu_coarse
+  - learning/optimizer: finetune_adam_detail
+  - learning/batching: single_gpu_detail
   - inout: desktop
