Add the possibility to fill background of the output image from input image. This should help EmoNet

--- a/applications/DECA/deca_conf/model/settings/default_detail.yaml
+++ b/applications/DECA/deca_conf/model/settings/default_detail.yaml
@@ -6,8 +6,10 @@
 train_coarse: 0
 useSeg: false
 #useSeg: true
+background_from_input: true
 detail_constrain_type: exchange
 mode: detail
+
 
 resume_training: True # this loads a pretrained model
 
