--- a/applications/DECA/deca_conf/model/settings/default_coarse.yaml
+++ b/applications/DECA/deca_conf/model/settings/default_coarse.yaml
@@ -3,6 +3,7 @@ mode: coarse
 resume_training: True # this loads a pretrained model
 useSeg: false
 #useSeg: true
+background_from_input: true
 
 useWlmk: True
 #useWlmk: False
