Add predicted valence, arousal and expression values to logs (not just the losses) Add the possibility to compute a distace to GT valence/arousal/expression values and use it as a loss or log it as a metric.

--- a/applications/DECA/deca_conf/model/settings/default_coarse.yaml
+++ b/applications/DECA/deca_conf/model/settings/default_coarse.yaml
@@ -21,11 +21,5 @@ shape_constrain_type: 'exchange' # None
 
 use_emonet_loss: False
 emonet_reg: 0.15
-
-
-# training related (to remove)
-#multi_gpu: false
-#n_epoch: 500
-
-# data related
-#training_data: vox1  #to remove
+use_gt_emotion_loss: False
+gt_emotion_reg: 0.15
