--- a/applications/DECA/deca_conf/inout/cluster.yaml
+++ b/applications/DECA/deca_conf/inout/cluster.yaml
@@ -1,5 +1,5 @@
 # @package _group_
 output_dir: /ps/scratch/rdanecek/emoca/finetune_deca
-full_run_dir: /ps/scratch/rdanecek/emoca/finetune_deca
-checkpoint_dir: /ps/scratch/rdanecek/emoca/finetune_deca
-name: coding
+full_run_dir: todo
+checkpoint_dir: todo
+name: todo
