--- a/applications/DECA/deca_conf/model/settings/default_detail.yaml
+++ b/applications/DECA/deca_conf/model/settings/default_detail.yaml
@@ -3,7 +3,7 @@
 # settings
 #use_flip: false # not used
 
-train_coarse: 0
+train_coarse: false
 useSeg: false
 #useSeg: true
 background_from_input: true
