--- a/applications/DECA/deca_conf/learning/batching/single_gpu_detail.yaml
+++ b/applications/DECA/deca_conf/learning/batching/single_gpu_detail.yaml
@@ -10,4 +10,6 @@ train_K_policy: random
 val_K_policy: sequential
 test_K_policy: sequential
 #K_policy: sequential
+
 num_gpus: 1
+gpu_memory_min_gb: 14
