--- a/applications/DECA/deca_conf/model/settings/coarse_train.yaml
+++ b/applications/DECA/deca_conf/model/settings/coarse_train.yaml
@@ -1,9 +1,15 @@
 # @package model
-max_epochs: 20
+max_epochs: 1
+
+
+test_vis_frequency: 1
+val_vis_frequency: 200
+train_vis_frequency: 100
+
 mode: coarse
 resume_training: True # this loads a pretrained model
-useSeg: false
-#useSeg: true
+#useSeg: false
+useSeg: true
 background_from_input: true
 
 useWlmk: True
@@ -11,16 +17,16 @@ useWlmk: True
 lmk_weight: 1
 eyed: 1.0
 lipd: 0.1
-photo: 2.
-idw: 0.15
+#idw: 0.15 # from Yao's code
+idw: 0.2 # value written in the paper
 exp_reg: 1e-4
 shape_reg: 1e-4
 tex_reg: 1e-5
 light_reg: 12
-photow: 2
+photow: 2.
 shape_constrain_type: 'exchange' # None
 
-use_emonet_loss: True
-emonet_reg: 0.15
+use_emonet_loss: False
+emonet_reg: 0.0
 use_gt_emotion_loss: False
-gt_emotion_reg: 0.15
+gt_emotion_reg: 0.0
