--- a/applications/DECA/deca_conf/model/settings/default_coarse.yaml
+++ b/applications/DECA/deca_conf/model/settings/default_coarse.yaml
@@ -1,4 +1,10 @@
 # @package model
+max_epochs: 20
+
+test_vis_frequency: 30
+val_vis_frequency: 200
+train_vis_frequency: 100
+
 mode: coarse
 resume_training: True # this loads a pretrained model
 useSeg: false
@@ -10,13 +16,12 @@ useWlmk: True
 lmk_weight: 1
 eyed: 1.0
 lipd: 0.1
-photo: 2.
 idw: 0.15
 exp_reg: 1e-4
 shape_reg: 1e-4
 tex_reg: 1e-5
 light_reg: 12
-photow: 2
+photow: 2.
 shape_constrain_type: 'exchange' # None
 
 use_emonet_loss: False
