--- a/applications/DECA/deca_conf/deca_train_coarse_pretrain.yaml
+++ b/applications/DECA/deca_conf/deca_train_coarse_pretrain.yaml
@@ -5,5 +5,5 @@ defaults:
   - model/sizes : default
   - model/flame_tex: bfm_desktop
   - learning/optimizer: finetune_adam_coarse
-  - learning/batching: single_gpu_coarse
+  - learning/batching: single_gpu_coarse_pretrain
   - inout: desktop
