--- a/applications/DECA/deca_conf/deca_train_coarse_pretrain_cluster.yaml
+++ b/applications/DECA/deca_conf/deca_train_coarse_pretrain_cluster.yaml
@@ -3,7 +3,7 @@ defaults:
   - model/paths : cluster
   - model/settings : coarse_pretrain
   - model/sizes : default
-  - model/flame_tex: bfm_desktop
+  - model/flame_tex: bfm
   - learning/optimizer: finetune_adam_coarse
   - learning/batching: single_gpu_coarse_pretrain
   - inout: desktop
