Add options for whether to use certain losses or not.

--- a/applications/DECA/deca_conf/model/settings/coarse_train.yaml
+++ b/applications/DECA/deca_conf/model/settings/coarse_train.yaml
@@ -11,7 +11,7 @@ resume_training: True # this loads a pretrained model
 #useSeg: false
 useSeg: true
 background_from_input: true
-
+use_landmarks: True
 useWlmk: True
 #useWlmk: False
 lmk_weight: 1
