--- a/applications/DECA/deca_conf/model/settings/detail_train.yaml
+++ b/applications/DECA/deca_conf/model/settings/detail_train.yaml
@@ -35,6 +35,9 @@ sfsw:
 - 0
 - 0
 
+use_detail_l1: True
+use_detail_mrf: True
+use_detailed_photo: False
 
 use_emonet_loss: False
 emonet_reg: 0.15
