--- a/applications/DECA/deca_conf/model/settings/coarse_pretrain.yaml
+++ b/applications/DECA/deca_conf/model/settings/coarse_pretrain.yaml
@@ -11,7 +11,7 @@ resume_training: False # this loads a pretrained model
 #useSeg: false
 useSeg: true
 background_from_input: true
-
+use_landmarks: True
 useWlmk: True
 #useWlmk: False
 #lmk_weight: 1e-4 # REALLY? this value is in the paper but seems awfully low
