Fix configs to latest updates

--- a/applications/DECA/deca_conf/model/settings/coarse_train.yaml
+++ b/applications/DECA/deca_conf/model/settings/coarse_train.yaml
@@ -23,6 +23,7 @@ exp_reg: 1e-4
 shape_reg: 1e-4
 tex_reg: 1e-5
 light_reg: 12
+use_photometric: True
 photow: 2.
 shape_constrain_type: 'exchange' # None
 
