--- a/applications/DECA/deca_conf/model/settings/default_coarse_emonet.yaml
+++ b/applications/DECA/deca_conf/model/settings/default_coarse_emonet.yaml
@@ -1,5 +1,14 @@
 # @package model
 max_epochs: 20
+
+test_vis_frequency: 30
+val_vis_frequency: 200
+train_vis_frequency: 100
+
+test_vis_frequency: 30
+val_vis_frequency: 200
+train_vis_frequency: 100
+
 mode: coarse
 resume_training: True # this loads a pretrained model
 useSeg: false
