--- a/applications/DECA/deca_conf/model/settings/coarse_train.yaml
+++ b/applications/DECA/deca_conf/model/settings/coarse_train.yaml
@@ -1,10 +1,11 @@
 # @package model
 max_epochs: 3
+#max_epochs: 2 TODO: it seems 2 or maybe even less, like 1.5 is more than enough, verify this and then change the default
 val_check_interval: 0.2
 
 test_vis_frequency: 1
 val_vis_frequency: 200
-train_vis_frequency: 100
+train_vis_frequency: 1000
 
 mode: coarse
 resume_training: True # this loads a pretrained model
