--- a/applications/DECA/deca_conf/learning/batching/single_gpu_coarse_32gb.yaml
+++ b/applications/DECA/deca_conf/learning/batching/single_gpu_coarse_32gb.yaml
@@ -1,8 +1,12 @@
 # @package learning
 
-batch_size_train: 4
+#batch_size_train: 4
+#batch_size_test: 1
+#batch_size_val: 16
+batch_size_train: 3
 batch_size_test: 1
-batch_size_val: 16
+batch_size_val: 12
+
 train_K: 4 # num pictures of an identity per batch
 val_K: 1 # num pictures of an identity per batch
 test_K: 1 # num pictures of an identity per batch
