--- a/applications/DECA/deca_conf/model/settings/detail_train_emonet.yaml
+++ b/applications/DECA/deca_conf/model/settings/detail_train_emonet.yaml
@@ -40,7 +40,7 @@ use_detail_l1: True
 use_detail_mrf: True
 use_detailed_photo: False
 
-use_emonet_loss: False
-emonet_reg: 0.15
+use_emonet_loss: True
+emonet_reg: 0.0015
 use_gt_emotion_loss: False
 gt_emotion_reg: 0.0
