--- a/applications/DECA/deca_conf/deca_train_coarse_emonet_cluster.yaml
+++ b/applications/DECA/deca_conf/deca_train_coarse_emonet_cluster.yaml
@@ -1,9 +1,9 @@
 defaults:
-  - data: pretrain_coarse_data_cluster
+  - data: coarse_data_cluster
   - model/paths : cluster
-  - model/settings : coarse_pretrain
+  - model/settings : coarse_train_emonet
   - model/sizes : default
   - model/flame_tex: bfm
   - learning/optimizer: finetune_adam_coarse
-  - learning/batching: single_gpu_coarse_pretrain
+  - learning/batching: single_gpu_coarse
   - inout: cluster
