--- a/applications/DECA/deca_conf/deca_train_detail_cluster.yaml
+++ b/applications/DECA/deca_conf/deca_train_detail_cluster.yaml
@@ -6,4 +6,4 @@ defaults:
   - model/flame_tex: bfm
   - learning/optimizer: finetune_adam_coarse
   - learning/batching: single_gpu_detail
-  - inout: desktop
+  - inout: cluster
