--- a/applications/DECA/deca_conf/model/settings/coarse_pretrain.yaml
+++ b/applications/DECA/deca_conf/model/settings/coarse_pretrain.yaml
@@ -29,7 +29,13 @@ use_photometric: False
 photow: 2.
 shape_constrain_type: 'exchange' # None
 
-use_emonet_loss: False
-emonet_reg: 0.0
+use_emonet_loss: False # if this one is false, the following are considered false as well
+use_emonet_feat_1: False
+use_emonet_feat_2: False
+use_emonet_valence: False
+use_emonet_arousal: False
+use_emonet_expression: False
+use_emonet_combined: False
+emonet_weight: 0.0
 use_gt_emotion_loss: False
 gt_emotion_reg: 0.0
