--- a/applications/DECA/deca_conf/model/settings/default_detail.yaml
+++ b/applications/DECA/deca_conf/model/settings/default_detail.yaml
@@ -43,7 +43,14 @@ use_detail_l1: True
 use_detail_mrf: True
 use_detailed_photo: False
 
-use_emonet_loss: False
-emonet_reg: 0.15
+use_emonet_loss: False # if this one is false, the following are considered false as well
+use_emonet_feat_1: False
+use_emonet_feat_2: False
+use_emonet_valence: False
+use_emonet_arousal: False
+use_emonet_expression: False
+use_emonet_combined: False
+
+emonet_weight: 0.0015
 use_gt_emotion_loss: False
 gt_emotion_reg: 0.15
