--- a/applications/DECA/deca_conf/model/settings/detail_train_emonet.yaml
+++ b/applications/DECA/deca_conf/model/settings/detail_train_emonet.yaml
@@ -40,7 +40,13 @@ use_detail_l1: True
 use_detail_mrf: True
 use_detailed_photo: False
 
-use_emonet_loss: True
-emonet_reg: 0.0015
+use_emonet_loss: True # if this one is false, the following are considered false as well
+use_emonet_feat_1: True
+use_emonet_feat_2: True
+use_emonet_valence: True
+use_emonet_arousal: True
+use_emonet_expression: True
+use_emonet_combined: True
+emonet_weight: 0.0015
 use_gt_emotion_loss: False
 gt_emotion_reg: 0.0
