--- a/applications/DECA/deca_conf/model/settings/coarse_train_emonet.yaml
+++ b/applications/DECA/deca_conf/model/settings/coarse_train_emonet.yaml
@@ -8,7 +8,7 @@ val_vis_frequency: 200
 train_vis_frequency: 1000
 
 mode: coarse
-resume_training: True # this loads a pretrained model
+resume_training: False # this loads a pretrained model
 #useSeg: false
 useSeg: true
 background_from_input: true
