--- a/applications/DECA/deca_conf/model/settings/default_detail.yaml
+++ b/applications/DECA/deca_conf/model/settings/default_detail.yaml
@@ -17,7 +17,7 @@ detail_constrain_type: exchange
 mode: detail
 
 
-resume_training: True # this loads a pretrained model
+resume_training: False # this loads a pretrained model
 
 lmk_weight: 1
 useWlmk: true
