Add data augmentation with ImgAug. Adapt configs to be able to take data augmentation parameters.

--- a/applications/DECA/deca_conf/deca_finetune_detail_emonet.yaml
+++ b/applications/DECA/deca_conf/deca_finetune_detail_emonet.yaml
@@ -1,5 +1,6 @@
 defaults:
-  - data: data_desktop
+  - data/datasets: data_desktop
+  - data/augmentations: none
   - model/paths : desktop
   - model/settings : default_detail_emonet
   - model/sizes : default
