--- a/applications/DECA/deca_conf/deca_finetune_coarse_cluster_test.yaml
+++ b/applications/DECA/deca_conf/deca_finetune_coarse_cluster_test.yaml
@@ -1,5 +1,6 @@
 defaults:
-  - data: data_cluster
+  - data/datasets: data_cluster
+  - data/augmentations: none
   - model/paths : cluster
   - model/settings : default_coarse
   - model/sizes : default
