--- a/applications/DECA/deca_conf/deca_train_coarse_emonet_cluster.yaml
+++ b/applications/DECA/deca_conf/deca_train_coarse_emonet_cluster.yaml
@@ -1,5 +1,6 @@
 defaults:
-  - data: coarse_data_cluster
+  - data/datasets: coarse_data_cluster
+  - data/augmentations: none
   - model/paths : cluster
   - model/settings : coarse_train_emonet
   - model/sizes : default
