--- a/applications/DECA/deca_conf/deca_train_coarse_pretrain_cluster.yaml
+++ b/applications/DECA/deca_conf/deca_train_coarse_pretrain_cluster.yaml
@@ -1,5 +1,6 @@
 defaults:
-  - data: pretrain_coarse_data_cluster
+  - data/datasets: pretrain_coarse_data_cluster
+  - data/augmentations: none
   - model/paths : cluster
   - model/settings : coarse_pretrain
   - model/sizes : default
