--- a/applications/DECA/deca_conf/deca_train_detail_emonet_cluster.yaml
+++ b/applications/DECA/deca_conf/deca_train_detail_emonet_cluster.yaml
@@ -1,5 +1,6 @@
 defaults:
-  - data: detail_data_cluster
+  - data/datasets: detail_data_cluster
+  - data/augmentations: none
   - model/paths : cluster
   - model/settings : detail_train_emonet
   - model/sizes : default
