--- a/applications/DECA/deca_conf/deca_finetune_detail_cluster.yaml
+++ b/applications/DECA/deca_conf/deca_finetune_detail_cluster.yaml
@@ -7,4 +7,5 @@ defaults:
   - model/flame_tex: bfm
   - learning/optimizer: finetune_adam_detail
   - learning/batching: single_gpu_detail
+  - learning/callbacks: early_stopping
   - inout: cluster
