--- a/applications/DECA/deca_conf/model/settings/detail_train.yaml
+++ b/applications/DECA/deca_conf/model/settings/detail_train.yaml
@@ -18,7 +18,7 @@ resume_training: False # this loads a pretrained model
 lmk_weight: 1
 eyed: 1.0 # used only when train_coarse is true
 lipd: 0.1 # used only when train_coarse is true
-use_photometric: # used only when train_coarse is true
+use_photometric: True # used only when train_coarse is true
 photow: 2
 idw: 0.12 # used only when train_coarse is true
 useWlmk: true
