Tweak data augmentation a bit more. Add configurable patience parameter to early stopping as the default value appears to be not enough. Add a verbose print that specifies which checkpoint is loaded and used after training (if one is reloaded)

--- a/applications/DECA/deca_conf/data/augmentations/default.yaml
+++ b/applications/DECA/deca_conf/data/augmentations/default.yaml
@@ -13,8 +13,8 @@ augmentation:
   - OneOf:
       - JpegCompression:
           - compression:
-              - 0
-              - 10
+              - 50
+              - 90
       - AdditiveGaussianNoise:
           - scale:
             - 0
@@ -28,3 +28,5 @@ augmentation:
           - alpha:
               - 0.0
               - 0.5
+      - Identity:
+          - name: identity
