--- a/applications/DECA/deca_conf/data/datasets/pretrain_coarse_data_cluster.yaml
+++ b/applications/DECA/deca_conf/data/datasets/pretrain_coarse_data_cluster.yaml
@@ -14,12 +14,15 @@ testing_datasets:
   - now-val
 #  - papers-val # won't load
   - celeb-val
-#scale_min: 1.4
+scale_min: 1.4
+scale_max: 1.8
 #scale_max: 2.
-scale_min: 2.0
-scale_max: 2.8
-trans_scale: 0.4
+#scale_min: 2.0
+#scale_max: 2.8
+trans_scale: 0.2
+#trans_scale: 0.4
 n_train: 10000000
-split_ratio: 0.9
+#split_ratio: 0.9
+split_ratio: 0.8
 split_style: random
 num_workers: 4
