--- a/applications/DECA/deca_conf/deca_finetune_coarse_emonet_all.yaml
+++ b/applications/DECA/deca_conf/deca_finetune_coarse_emonet_all.yaml
@@ -6,6 +6,6 @@ defaults:
   - model/sizes : default
   - model/flame_tex: bfm_desktop
   - learning/optimizer: finetune_adam_coarse
-  - learning/batching: single_gpu_coarse
+  - learning/batching: single_gpu_coarse_32gb
   - learning/callbacks: early_stopping
   - inout: desktop
