--- a/applications/DECA/deca_conf/deca_finetune_detail_cluster_all.yaml
+++ b/applications/DECA/deca_conf/deca_finetune_detail_cluster_all.yaml
@@ -6,6 +6,6 @@ defaults:
   - model/sizes : default
   - model/flame_tex: bfm
   - learning/optimizer: finetune_adam_detail
-  - learning/batching: single_gpu_detail
+  - learning/batching: single_gpu_detail_32gb
   - learning/callbacks: early_stopping
   - inout: cluster
