--- a/applications/DECA/deca_conf/deca_train_coarse_pretrain.yaml
+++ b/applications/DECA/deca_conf/deca_train_coarse_pretrain.yaml
@@ -8,4 +8,5 @@ defaults:
   - learning/optimizer: finetune_adam_coarse
   - learning/batching: single_gpu_coarse_pretrain
   - learning/callbacks: early_stopping
+  - learning/logging: wandb
   - inout: desktop
