--- a/applications/DECA/deca_conf/model/settings/default_detail_expdeca.yaml
+++ b/applications/DECA/deca_conf/model/settings/default_detail_expdeca.yaml
@@ -26,8 +26,8 @@ train_coarse: false
 useSeg: false
 #useSeg: true
 background_from_input: true
-#detail_constrain_type: exchange
-detail_constrain_type: same
+detail_constrain_type: exchange
+#detail_constrain_type: none
 mode: detail
 
 
