--- a/applications/DECA/deca_conf/data/datasets/coarse_data_cluster.yaml
+++ b/applications/DECA/deca_conf/data/datasets/coarse_data_cluster.yaml
@@ -1,4 +1,5 @@
 # @package data
+data_class: DecaDataModule
 path: /ps/scratch/face2d3d/
 #path: /home/rdanecek/Workspace/mount/scratch/face2d3d/
 training_datasets:
@@ -22,7 +23,7 @@ scale_max: 1.8
 trans_scale: 0.2
 #trans_scale: 0.4
 n_train: 10000000
-split_ratio: 0.9
 #split_ratio: 0.8
+split_ratio: 0.9
 split_style: random
 num_workers: 4
