--- a/applications/DECA/deca_conf/model/settings/default_coarse_expdeca.yaml
+++ b/applications/DECA/deca_conf/model/settings/default_coarse_expdeca.yaml
@@ -16,7 +16,8 @@ train_vis_frequency: 100
 
 mode: coarse
 resume_training: True # this loads a pretrained model
-useSeg: false
+useSeg: rend # rendered mask works better for expression-only models because the GT segmentation often sucks
+#useSeg: false
 #useSeg: true
 background_from_input: true
 use_landmarks: True
