--- a/applications/DECA/deca_conf/model/settings/default_detail_expdeca.yaml
+++ b/applications/DECA/deca_conf/model/settings/default_detail_expdeca.yaml
@@ -23,7 +23,8 @@ train_vis_frequency: 100
 #use_flip: false # not used
 
 train_coarse: false
-useSeg: false
+useSeg: rend # rendered mask works better for expression-only models because the GT segmentation often sucks
+#useSeg: false
 #useSeg: true
 background_from_input: true
 detail_constrain_type: exchange
