--- a/applications/EmoDECA/emodeca_conf/data/datasets/affectnet_cluster.yaml
+++ b/applications/EmoDECA/emodeca_conf/data/datasets/affectnet_cluster.yaml
@@ -5,6 +5,7 @@ output_dir: /ps/scratch/rdanecek/data/affectnet/
 processed_subfolder: processed_2021_Apr_05_15-22-18
 num_workers: 6
 
+ignore_invalid: true
 # default parameters:
 mode: manual # the original AffectNet train/val split
 image_size: 224
