--- a/applications/DECA/deca_conf/model/settings/coarse_train_expdeca_emonet.yaml
+++ b/applications/DECA/deca_conf/model/settings/coarse_train_expdeca_emonet.yaml
@@ -42,12 +42,12 @@ exp_deca_global_pose: False
 exp_deca_jaw_pose: True
 #exp_deca_jaw_pose: False
 
-use_emonet_loss: False # if this one is false, the following are considered false as well
+use_emonet_loss: True # if this one is false, the following are considered false as well
 use_emonet_feat_1: False
-use_emonet_feat_2: False
-use_emonet_valence: False
-use_emonet_arousal: False
-use_emonet_expression: False
+use_emonet_feat_2: True
+use_emonet_valence: True
+use_emonet_arousal: True
+use_emonet_expression: True
 use_emonet_combined: False
 emonet_weight: 0.0015
 use_gt_emotion_loss: False
