--- a/applications/DECA/deca_conf/model/settings/default_coarse_expdeca_emonet.yaml
+++ b/applications/DECA/deca_conf/model/settings/default_coarse_expdeca_emonet.yaml
@@ -6,33 +6,35 @@ expression_backbone: deca_parallel
 #expression_backbone: emonet_trainable
 #expression_backbone: emonet_static
 
+max_epochs: 20
+max_steps: 1000000
+val_check_interval: 1000
 
-max_epochs: 3
-#max_epochs: 2 TODO: it seems 2 or maybe even less, like 1.5 is more than enough, verify this and then change the default
-val_check_interval: 0.2
-
-test_vis_frequency: 1
+test_vis_frequency: 30
 val_vis_frequency: 200
-train_vis_frequency: 1000
+train_vis_frequency: 100
 
 mode: coarse
-resume_training: False # this loads a pretrained model
+resume_training: True # this loads a pretrained model
+useSeg: rend # rendered mask works better for expression-only models because the GT segmentation often sucks
 #useSeg: false
-useSeg: true
+#useSeg: true
 background_from_input: true
 use_landmarks: True
+#use_landmarks: False
 useWlmk: True
 #useWlmk: False
 lmk_weight: 1
 eyed: 1.0
 lipd: 0.1
-#idw: 0.15 # from Yao's code
-idw: 0.2 # value written in the paper
+idw: 0.15
+#idw: 0.
 exp_reg: 1e-4
 shape_reg: 1e-4
 tex_reg: 1e-5
 light_reg: 12
 use_photometric: True
+#use_photometric: False
 photow: 2.
 shape_constrain_type: 'exchange' # None
 #shape_constrain_type: 'same' # None
@@ -42,12 +44,13 @@ exp_deca_global_pose: False
 exp_deca_jaw_pose: True
 #exp_deca_jaw_pose: False
 
-use_emonet_loss: False # if this one is false, the following are considered false as well
+
+use_emonet_loss: True # if this one is false, the following are considered false as well
 use_emonet_feat_1: False
-use_emonet_feat_2: False
-use_emonet_valence: False
-use_emonet_arousal: False
-use_emonet_expression: False
+use_emonet_feat_2: True
+use_emonet_valence: True
+use_emonet_arousal: True
+use_emonet_expression: True
 use_emonet_combined: False
 emonet_weight: 0.0015
 use_gt_emotion_loss: False
