--- a/applications/EmoDECA/emodeca_conf/emodeca_coarse.yaml
+++ b/applications/EmoDECA/emodeca_conf/emodeca_coarse.yaml
@@ -1,12 +1,14 @@
 defaults:
-  - data/datasets: data_desktop
+  - data/datasets: affectnet_desktop
 #  - data/augmentations: none
 #  - model/paths : desktop
   - model/settings : coarse_emodeca
 #  - model/sizes : default
 #  - model/flame_tex: bfm_desktop
   - learning/optimizer: adam
-#  - learning/batching: single_gpu_coarse
+  - learning/batching: single_gpu_coarse
   - learning/callbacks: early_stopping
-  - learning/logging: wandb
+#  - learning/logging: wandb
+  - learning/logging: none
   - inout: desktop
+
