--- a/applications/EmoDECA/emodeca_conf/emodeca_coarse_cluster.yaml
+++ b/applications/EmoDECA/emodeca_conf/emodeca_coarse_cluster.yaml
@@ -1,5 +1,5 @@
 defaults:
-  - data/datasets: affectnet_desktop
+  - data/datasets: affectnet_cluster
 #  - data/augmentations: none
 #  - model/paths : desktop
   - model/settings : coarse_emodeca
@@ -8,8 +8,8 @@ defaults:
   - learning/optimizer: adam
   - learning/batching: single_gpu_coarse
   - learning/callbacks: early_stopping
-#  - learning/logging: wandb
-  - learning/logging: none
+  - learning/logging: wandb
+#  - learning/logging: none
   - learning/training: default
   - inout: desktop
 
