Test_step implementation + visualization for EmoDECA.

--- a/applications/EmoDECA/emodeca_conf/emodeca_coarse.yaml
+++ b/applications/EmoDECA/emodeca_conf/emodeca_coarse.yaml
@@ -8,8 +8,8 @@ defaults:
   - learning/optimizer: adam
   - learning/batching: single_gpu_coarse
   - learning/callbacks: early_stopping
-#  - learning/logging: wandb
-  - learning/logging: none
+  - learning/logging: wandb
+#  - learning/logging: none
   - learning/training: default
   - inout: desktop
 
