--- a/applications/DECA/deca_conf/model/settings/coarse_train.yaml
+++ b/applications/DECA/deca_conf/model/settings/coarse_train.yaml
@@ -1,4 +1,5 @@
 # @package model
+deca_class: DECA
 max_epochs: 3
 #max_epochs: 2 TODO: it seems 2 or maybe even less, like 1.5 is more than enough, verify this and then change the default
 val_check_interval: 0.2
