--- a/applications/DECA/deca_conf/model/settings/detail_train_expdeca_emonet.yaml
+++ b/applications/DECA/deca_conf/model/settings/detail_train_expdeca_emonet.yaml
@@ -23,7 +23,13 @@ train_coarse: false
 useSeg: false
 #useSeg: true
 background_from_input: true
-detail_constrain_type: exchange
+#detail_constrain_type: exchange
+detail_constrain_type: none
+
+expression_constrain_type: none
+expression_constrain_use_jaw_pose: True
+expression_constrain_use_global_pose: False
+
 mode: detail
 
 resume_training: False # this loads a pretrained model
