--- a/applications/EmoDECA/emodeca_conf/data/datasets/affectnet_cluster.yaml
+++ b/applications/EmoDECA/emodeca_conf/data/datasets/affectnet_cluster.yaml
@@ -1,7 +1,8 @@
 # @package data
 data_class: AffectNetDataModule
 input_dir: /ps/project/EmotionalFacialAnimation/data/affectnet
-output_dir: /ps/scratch/rdanecek/data/affectnet/
+#output_dir: /ps/scratch/rdanecek/data/affectnet/
+output_dir: /is/cluster/work/rdanecek/data/affectnet/
 processed_subfolder: processed_2021_Apr_05_15-22-18
 num_workers: 8
 
