--- a/applications/DECA/deca_conf/model/settings/coarse_train_expdeca.yaml
+++ b/applications/DECA/deca_conf/model/settings/coarse_train_expdeca.yaml
@@ -37,6 +37,10 @@ photow: 2.
 shape_constrain_type: 'exchange' # None
 #shape_constrain_type: 'same' # None
 
+expression_constrain_type: none
+expression_constrain_use_jaw_pose: True
+expression_constrain_use_global_pose: False
+
 exp_deca_global_pose: False
 #exp_deca_global_pose: True
 exp_deca_jaw_pose: True
