--- a/applications/DECA/deca_conf/model/settings/coarse_train_expdeca.yaml
+++ b/applications/DECA/deca_conf/model/settings/coarse_train_expdeca.yaml
@@ -34,8 +34,9 @@ tex_reg: 1e-5
 light_reg: 12
 use_photometric: True
 photow: 2.
-shape_constrain_type: 'exchange' # None
+#shape_constrain_type: 'exchange' # None
 #shape_constrain_type: 'same' # None
+shape_constrain_type: none # None
 
 expression_constrain_type: none
 expression_constrain_use_jaw_pose: True
