--- a/applications/DECA/deca_conf/model/settings/default_coarse_expdeca.yaml
+++ b/applications/DECA/deca_conf/model/settings/default_coarse_expdeca.yaml
@@ -36,8 +36,9 @@ light_reg: 12
 use_photometric: True
 #use_photometric: False
 photow: 2.
-shape_constrain_type: 'exchange' # None
+#shape_constrain_type: 'exchange' # None
 #shape_constrain_type: 'same' # None
+shape_constrain_type: none # None
 
 expression_constrain_type: none
 
