--- a/applications/DECA/deca_conf/inout/cluster.yaml
+++ b/applications/DECA/deca_conf/inout/cluster.yaml
@@ -1,5 +1,6 @@
 # @package _group_
-output_dir: /ps/scratch/rdanecek/emoca/finetune_deca
+#output_dir: /ps/scratch/rdanecek/emoca/finetune_deca
+output_dir: /is/cluster/work/rdanecek/emoca/finetune_deca
 full_run_dir: todo
 checkpoint_dir: todo
 name: todo
