--- a/applications/EmoDECA/emodeca_conf/inout/cluster.yaml
+++ b/applications/EmoDECA/emodeca_conf/inout/cluster.yaml
@@ -1,5 +1,6 @@
 # @package _group_
-output_dir: /ps/scratch/rdanecek/emoca/emodeca
+#output_dir: /ps/scratch/rdanecek/emoca/emodeca
+output_dir: /is/cluster/work/rdanecek/emoca/emodeca
 full_run_dir: todo
 checkpoint_dir: todo
 name: todo
