--- a/applications/EmoDECA/emodeca_conf/model/settings/emonet.yaml
+++ b/applications/EmoDECA/emodeca_conf/model/settings/emonet.yaml
@@ -1,5 +1,6 @@
 # @package model
-emodeca_type: EmoDECA
+emodeca_type: EmoNetModule
+load_pretrained_emonet: True
 
 predict_expression: true
 predict_valence: true
@@ -17,12 +18,4 @@ exp_activation: log_softmax
 #exp_activation: none
 
 expression_balancing: false
-use_expression: true
-use_global_pose: false
-use_jaw_pose: true
-use_detail_code: false
-deca_checkpoint: todo
-deca_cfg: todo
-num_mlp_layers: 4
-finetune_deca: false
 
