--- a/applications/EmoDECA/emodeca_conf/model/settings/coarse_emodeca.yaml
+++ b/applications/EmoDECA/emodeca_conf/model/settings/coarse_emodeca.yaml
@@ -4,8 +4,23 @@ emodeca_type: EmoDECA
 predict_expression: true
 predict_valence: true
 predict_arousal: true
-a_loss: mse_loss
-v_loss: mse_loss
+
+#a_loss: mse_loss
+a_loss:
+#  - a_ccc: 0.5
+#  - a_pcc: 0.5
+  a_mse: 1.
+
+#v_loss: mse_loss
+v_loss:
+#  - v_ccc: 0.5
+#  - v_pcc: 0.5
+  v_mse: 1.
+
+va_loss:
+  va_lpcc: 1.
+  va_lccc: 1.
+
 exp_loss: nll_loss
 #exp_loss: cross_entropy
 
@@ -15,6 +30,10 @@ v_activation: none
 #v_activation: tanh
 exp_activation: log_softmax
 #exp_activation: none
+
+va_loss_scheme: scheme
+#va_loss_scheme: norm
+#va_loss_scheme: none
 
 expression_balancing: false
 use_expression: true
