--- a/applications/DECA/deca_conf/model/settings/detail_train_expdeca.yaml
+++ b/applications/DECA/deca_conf/model/settings/detail_train_expdeca.yaml
@@ -31,6 +31,7 @@ detail_constrain_type: none
 expression_constrain_type: none
 expression_constrain_use_jaw_pose: True
 expression_constrain_use_global_pose: False
+use_geometric_losses_expression_exchange: False
 
 mode: detail
 
