--- a/applications/DECA/deca_conf/model/settings/default_coarse_expdeca.yaml
+++ b/applications/DECA/deca_conf/model/settings/default_coarse_expdeca.yaml
@@ -41,6 +41,7 @@ photow: 2.
 shape_constrain_type: none # None
 
 expression_constrain_type: none
+use_geometric_losses_expression_exchange: False
 
 exp_deca_global_pose: False
 #exp_deca_global_pose: True
