--- a/applications/EmoDECA/emodeca_conf/model/settings/coarse_emodeca_emonet.yaml
+++ b/applications/EmoDECA/emodeca_conf/model/settings/coarse_emodeca_emonet.yaml
@@ -35,11 +35,17 @@ va_loss_scheme: shake
 #va_loss_scheme: norm
 #va_loss_scheme: none
 
-use_mlp: true
-use_emonet: false
-use_coarse_image_emonet: false
-use_detail_image_emonet: false
-
+use_mlp: false
+use_emonet: true
+load_pretrained_emonet: false
+unpose_global_emonet: true
+use_coarse_image_emonet: true
+use_detail_image_emonet: true
+static_cam_emonet:
+  - 10.0
+  - 0.0
+  - 0.0
+static_light: 3.0
 
 expression_balancing: false
 use_identity: false
