--- a/applications/EmoDECA/emodeca_conf/emodeca_emonet_coarse.yaml
+++ b/applications/EmoDECA/emodeca_conf/emodeca_emonet_coarse.yaml
@@ -2,7 +2,7 @@ defaults:
   - data/datasets: affectnet_desktop
   - data/augmentations: none
 #  - model/paths : desktop
-  - model/settings : emonet
+  - model/settings : coarse_emodeca_emonet
 #  - model/sizes : default
 #  - model/flame_tex: bfm_desktop
   - learning/optimizer: adam
