--- a/applications/DECA/deca_conf/model/settings/coarse_train_expdeca_emomlp.yaml
+++ b/applications/DECA/deca_conf/model/settings/coarse_train_expdeca_emomlp.yaml
@@ -60,7 +60,7 @@ use_gt_emotion_loss: False
 gt_emotion_reg: 0.0
 
 
-mlp_emotion_predictor_weight: 0.0015
+mlp_emotion_predictor_weight: 1.
 mlp_emotion_predictor:
   predict_expression: true
   predict_valence: true
