--- a/applications/DECA/deca_conf/model/settings/detail_train_expdeca_emomlp.yaml
+++ b/applications/DECA/deca_conf/model/settings/detail_train_expdeca_emomlp.yaml
@@ -78,7 +78,7 @@ emonet_weight: 0.0015
 use_gt_emotion_loss: False
 gt_emotion_reg: 0.0
 
-mlp_emotion_predictor_weight: 0.0015
+mlp_emotion_predictor_weight: 1.
 mlp_emotion_predictor:
   predict_expression: true
   predict_valence: true
