Another refactoring weirdness fix. Pycharm is on fire.
Plus further advance on integration of StarGAN.

--- a/gdl_apps/DECA/deca_conf/deca_finetune_detail_cluster_all.yaml
+++ b/gdl_apps/DECA/deca_conf/deca_finetune_detail_cluster_all.yaml
@@ -4,6 +4,7 @@ defaults:
   - model/paths : cluster
   - model/settings : default_detail
   - model/sizes : default
+  - model/neural_rendering : none
   - model/flame_tex: bfm
   - learning/optimizer: finetune_adam_detail
   - learning/batching: single_gpu_detail_32gb
