--- a/gdl_apps/DECA/deca_conf/deca_finetune_coarse_emonet_all.yaml
+++ b/gdl_apps/DECA/deca_conf/deca_finetune_coarse_emonet_all.yaml
@@ -4,6 +4,7 @@ defaults:
   - model/paths : desktop
   - model/settings : default_coarse_emonet
   - model/sizes : default
+  - model/neural_rendering : none
   - model/flame_tex: bfm_desktop
   - learning/optimizer: finetune_adam_coarse
   - learning/batching: single_gpu_coarse_32gb
