--- a/gdl_apps/DECA/deca_conf/deca_finetune_detail_cluster_test.yaml
+++ b/gdl_apps/DECA/deca_conf/deca_finetune_detail_cluster_test.yaml
@@ -4,6 +4,7 @@ defaults:
   - model/paths : cluster
   - model/settings : default_detail
   - model/sizes : default
+  - model/neural_rendering : none
   - model/flame_tex: bfm
   - learning: finetune_adam_detail
   - inout: cluster
