--- a/gdl_apps/DECA/deca_conf/deca_finetune_detail_emonet.yaml
+++ b/gdl_apps/DECA/deca_conf/deca_finetune_detail_emonet.yaml
@@ -4,6 +4,7 @@ defaults:
   - model/paths : desktop
   - model/settings : default_detail_emonet
   - model/sizes : default
+  - model/neural_rendering : none
   - model/flame_tex: bfm_desktop
   - learning/optimizer: finetune_adam_detail
   - learning/batching: single_gpu_detail
