--- a/gdl_apps/DECA/deca_conf/deca_train_coarse_emonet_cluster.yaml
+++ b/gdl_apps/DECA/deca_conf/deca_train_coarse_emonet_cluster.yaml
@@ -4,6 +4,7 @@ defaults:
   - model/paths : cluster
   - model/settings : coarse_train_emonet
   - model/sizes : default
+  - model/neural_rendering : none
   - model/flame_tex: bfm
   - learning/optimizer: finetune_adam_coarse
   - learning/batching: single_gpu_coarse
