--- a/gdl_apps/EmoDECA/emodeca_conf/emodeca_coarse.yaml
+++ b/gdl_apps/EmoDECA/emodeca_conf/emodeca_coarse.yaml
@@ -4,6 +4,7 @@ defaults:
 #  - model/paths : desktop
   - model/settings : coarse_emodeca
 #  - model/sizes : default
+#  - model/neural_rendering : none
 #  - model/flame_tex: bfm_desktop
   - learning/optimizer: adam
   - learning/batching: single_gpu_coarse
