--- a/gdl_apps/DECA/deca_conf/deca_train_detail_stargan_cluster.yaml
+++ b/gdl_apps/DECA/deca_conf/deca_train_detail_stargan_cluster.yaml
@@ -1,13 +1,13 @@
 defaults:
-  - data/datasets: data_desktop
+  - data/datasets: detail_data
   - data/augmentations: none
   - model/paths : desktop
-  - model/settings : default_coarse
+  - model/settings : detail_train
   - model/sizes : default
-  - model/neural_rendering : none
-  - model/flame_tex: bfm_desktop
+  - model/neural_rendering : stargan
+  - model/flame_tex: bfm
   - learning/optimizer: finetune_adam_coarse
-  - learning/batching: single_gpu_coarse
+  - learning/batching: single_gpu_detail
   - learning/callbacks: early_stopping
   - learning/logging: wandb
   - inout: desktop
