--- a/gdl_apps/DECA/deca_conf/deca_train_detail_stargan_cluster.yaml
+++ b/gdl_apps/DECA/deca_conf/deca_train_detail_stargan_cluster.yaml
@@ -1,7 +1,7 @@
 defaults:
   - data/datasets: detail_data
   - data/augmentations: none
-  - model/paths : desktop
+  - model/paths : cluster
   - model/settings : detail_train
   - model/sizes : default
   - model/neural_rendering : stargan
