Better error writing.

--- a/gdl_apps/DECA/deca_conf/deca_train_detail_stargan_cluster.yaml
+++ b/gdl_apps/DECA/deca_conf/deca_train_detail_stargan_cluster.yaml
@@ -4,7 +4,7 @@ defaults:
   - model/paths : cluster
   - model/settings : detail_train
   - model/sizes : default
-  - model/neural_rendering : stargan
+  - model/neural_rendering : stargan_cluster
   - model/flame_tex: bfm
   - learning/optimizer: finetune_adam_coarse
   - learning/batching: single_gpu_detail
